fixed nav colors and spacing. colors of cubes

--- a/index.css
+++ b/index.css
@@ -7,4 +7,21 @@ body { margin: 0; }
     transform: translateX(-50%);
     font-size: 60px;
     color: white;
+    display: inline-flex;
+}
+#no{
+    padding: 0em 0.4em;
+    color: blue;
+}
+#se{
+    padding: 0em 0.4em;
+    color: yellow;
+}
+#dk{
+    padding: 0em 0.4em;
+    color: red;
+}
+#fi{
+    padding: 0em 0.4em;
+    color: white;
 }
